...
        android:textAlignment="center" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Submit"
        android:id="@+id/button"
        android:background="@color/colorPrimaryDark"
        android:textColor="#ffffff"
        android:layout_alignParentBottom="true"
        android:layout_alignRight="@+id/imageView2"
        android:layout_alignEnd="@+id/imageView2"
        android:layout_alignLeft="@+id/imageView2"
...
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/nationality"
                android:hint="plural nationality"
                android:layout_below="@+id/titleTextView"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />
...
